--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,15 @@
   </properties>
 
   <dependencies>
+  
+  	
+  	
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+<!--       <version>4.11</version> -->
+      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
