--- a/pom.xml
+++ b/pom.xml
@@ -26,24 +26,31 @@
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.0.1</version>
-	    <scope>provided</scope><!-- 期望JDK、容器或使用者会提供这个依赖 -->
-	</dependency>
+<!-- 	    <scope>provided</scope> 期望JDK、容器或使用者会提供这个依赖 -->
+	</dependency> 
   	
   	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
-	<dependency>
+	 <dependency>
 	    <groupId>javax.servlet.jsp</groupId>
 	    <artifactId>javax.servlet.jsp-api</artifactId>
 	    <version>2.3.1</version>
-	    <scope>provided</scope>
-	</dependency>
+	   <!--  <scope>provided</scope> -->
+	</dependency> 
   	
-  	<!-- 添加JSTL支持 -->
+  	<!-- 添加JSTL支持: jstl+standard支持 -->
   	<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
 	<dependency>
 	    <groupId>javax.servlet.jsp.jstl</groupId>
 	    <artifactId>jstl</artifactId>
 	    <version>1.2</version>
+	</dependency> 
+	<!-- https://mvnrepository.com/artifact/taglibs/standard -->
+	<dependency>
+	    <groupId>taglibs</groupId>
+	    <artifactId>standard</artifactId>
+	    <version>1.1.2</version>
 	</dependency>
+	
   	
   	<!-- 添加Spring的支持 -->
   	<!-- 核心+bean+注解+上下文Context+web+springmvc+aop+切面aspects+jdbc+mybatis插件包 -->
