--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>blog.hongdu</display-name>
   <welcome-file-list>
+  <!-- web.xml配置的加载顺序:context-param -> listener -> filter -> servlet  -->
   <!-- 首页 -->
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
@@ -45,6 +46,10 @@
 	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!-- 初始化监听器:用来初始化组件,然后把博主信息、日志分类、日期分类、友情链接等信息加到全局application中,不用每次都请求来增加服务器压力 -->
+	<listener>
+		<listener-class>com.hongdu.service.impl.InitComponent</listener-class>
 	</listener>
 
 	<!-- 添加对springmvc的支持 -->
