--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,9 @@
   <display-name>blog.hongdu</display-name>
   <welcome-file-list>
   <!-- web.xml配置的加载顺序:context-param -> listener -> filter -> servlet  -->
-  <!-- 首页 -->
-    <welcome-file>index.jsp</welcome-file>
+  <!-- 首页 : 测试首页-->
+    <!-- <welcome-file>index.jsp</welcome-file> -->
+    <welcome-file>a.jsp</welcome-file><!-- 请求不变的部分：然后进行跳转转发,而不重新请求后台,减少资源消耗 -->
   </welcome-file-list>
   
   <!-- shiro过滤器定义 -->
