--- a/pom.xml
+++ b/pom.xml
@@ -284,6 +284,14 @@
 	    <version>1.0.16</version>
 	</dependency>
   	
+  	<!-- 添加jsoup支持 -->
+  	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+	<dependency>
+	    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.8.3</version>
+	</dependency>
+  	
   
     <dependency>
       <groupId>junit</groupId>
